# sbx

./: .gitignore  CLAUDE.md  KIMI.md  LICENSE  NOTICE  PUBLISHING.md  README.md  package-lock.json  package.json
.github/: FUNDING.yml
.github/workflows/: ci.yml  publish-base-image.yml  release.yml
.kimiflare/: memory.db  memory.db-shm  memory.db-wal
agent/: README.md  go.mod  go.sum
agent/cmd/hotcell-agent/: dial_linux.go  dial_other.go  (+6 more)
agent/proto/: frame.go  frame_test.go  messages.go
agent/server/: egress.go  server.go  server_test.go  stats_linux.go  stats_other.go
demo/: browser.js  lib.sh  part1.sh  part2.sh  record.sh
docs/: benchmarks.md  egress.md  guide.md  plan.md  reference.md  self-hosting.md
evidence/: README.md
evidence/macos-vz/: raw-run.txt
evidence/opencode-benchmark/: README.md
evidence/vector1-injection/: raw-run.txt
evidence/vector2-dependency/: raw-run.txt
examples/: README.md  agent.mjs  agents.sh  opencode.sh
examples/mastra-agent/: README.md  agent.mjs  package.json
helpers/hotcell-vz/: .gitignore  Package.swift  build-guest.sh  build-kernel.sh  convert-image.sh  hotcell-vz.entitlements
helpers/sbx-vz/: Package.swift  build-blank-workspace.sh  build-guest.sh  build-kernel.sh  convert-image.sh
images/base/: Dockerfile
launch/: README.md  REPORT.md  first-comment.md  framing.md  title-options.md  tweet-part-a.md  video-shotlist.md
launch/video/: README.md  agent.sh  install.sh  left.sh  right.sh
sdk/python/: README.md  pyproject.toml  smoke.py
sdk/python/hotcell/: __init__.py
sdk/python/sbx/: __init__.py
(+90 files in other folders)
