[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hotcell"
version = "0.1.11"
description = "Python client for the hotcell self-hostable agent sandbox daemon"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = []
keywords = ["sandbox", "ai-agents", "hotcell"]

[project.urls]
Homepage = "https://hotcell.sh"
Repository = "https://github.com/sinameraji/hotcell"

[tool.setuptools.packages.find]
where = ["."]
include = ["hotcell*"]

[tool.setuptools.package-data]
hotcell = ["py.typed"]
